# Template-Tauri-SQLite-Prisma-Vue-TS

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/src/: main.rs  menu.rs  state.rs
src-tauri/src/commands/: user.rs
src-tauri/src/db/: migration.sql  mod.rs  prisma.rs
src/components/: Modal.vue  User.vue
src/components/HTML/: ButtonSubmit.vue  Form.vue  Input.vue
src/components/Icon/: AddUser.vue  Cancel.vue  Check.vue  Close.vue  Delete.vue  Update.vue
src/store/: store.ts
src/types/: State.ts
