[package]
name = "template-tauri-prisma-sqlite-vue"
version = "0.0.0"
description = "A tauri template with vue - prisma - tauri - sqlite"
authors = ["Wysted"]
edition = "2021"

[workspace ] 
members = ["prisma-cli"] 
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.18.2", features = [] }

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }

serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
